--- a/public/chatroom/chat.css
+++ b/public/chatroom/chat.css
@@ -33,6 +33,7 @@ form{
 form input {
     flex-grow: 9;
     padding-left: 1%;
+    font-size: 100%;
 }
   
 form button {
@@ -41,6 +42,7 @@ form button {
     border-width: 0;
     margin-left: 1%;
     padding: 1% 0%;
+    font-size: 100%;
 }
 
 ul{
