--- a/public/style.css
+++ b/public/style.css
@@ -16,12 +16,13 @@ form > div{
     flex-direction: column;
     background-color: lightskyblue;
     border-radius: 5%;
-    padding: 3% 1%;
+    padding: 5% 5%;
 }
 
 h1{
-    margin: 3%;
+    margin: 1%;
     text-align: center;
+    font-size: 250%;
 }
 
 .username{
@@ -29,6 +30,7 @@ h1{
     flex-direction: column;
     align-items: center;
     margin: 6% 0%;
+    font-size: 140%;
 }
 
 .chatroom{
@@ -36,6 +38,7 @@ h1{
     flex-direction: column;
     align-items: center;
     margin: 3% 0%;
+    font-size: 140%;
 }
 
 input{
@@ -44,6 +47,7 @@ input{
     background-color: rgb(212, 230, 236);
     padding: 2%;
     margin: 1%;
+    font-size: 100%;
 }
 
 input:hover, input:focus{
@@ -62,6 +66,7 @@ button{
     color: white;
     border-radius: 3px;
     padding: 0% 3%;
+    font-size: 120%;
 }
 
 button:hover{
